--- a/src/main/webapp/css/bsteeleMusicApp.css
+++ b/src/main/webapp/css/bsteeleMusicApp.css
@@ -7,7 +7,7 @@ h1, .gwt-H1 {
     font-size: 28px;
     font-weight: bold;
     color: #777777;
-    margin: 0px;
+    margin: 3px;
     text-align: left;
     vertical-align: text-bottom;
 }
@@ -80,3 +80,7 @@ body {
 /*.gwt-SplitLayoutPanel .gwt-SplitLayoutPanel-HDragger { horizontal dragger }
 //.gwt-SplitLayoutPanel .gwt-SplitLayoutPanel-VDragger { vertical dragger }
 */
+
+table {
+    border: 2px;
+}
